Fix SVG style on Firefox browser.

--- a/bookmarks/static/style.css
+++ b/bookmarks/static/style.css
@@ -131,6 +131,9 @@ h5 { color: white }
 
  } /* End of Desktop style */
 
-
+.box1 {
+    width: 20px;
+    height: 20px;
+}
 
 
